src/objects/File_Upload__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>File_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Used to identify type of supporting material</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Supporting_Material_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Overview</fullName>
                </value>
                <value>
                    <fullName>Network Overview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frame_Contract_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Apttus__APTS_Agreement__c.Apttus__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Supporting Materials</relationshipLabel>
        <relationshipName>Supporting_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_Overview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer Purchase Order</description>
        <label>Customer Purchase Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Apttus_Config2__CustomerPurchaseOrder__c.Apttus_Config2__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
        <relationshipLabel>Supporting Materials</relationshipLabel>
        <relationshipName>Supporting_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporting_Material_Type__c</fullName>
        <label>Supporting Material Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CXM</fullName>
                </value>
                <value>
                    <fullName>New Feature Release</fullName>
                </value>
                <value>
                    <fullName>RMP</fullName>
                    <isActive>false</isActive>
                    <label>RMP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Txt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TDD LTE</fullName>
                </value>
                <value>
                    <fullName>FDD LTE</fullName>
                </value>
                <value>
                    <fullName>WCDMA</fullName>
                </value>
                <value>
                    <fullName>HW extension</fullName>
                </value>
                <value>
                    <fullName>Antenna Systems</fullName>
                </value>
                <value>
                    <fullName>3G Core</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core</fullName>
                </value>
                <value>
                    <fullName>Nokia Registers</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                    <isActive>false</isActive>
                    <label>LTE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case_Txt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Use Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <label>Use Case</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technology__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Energy Efficiency</fullName>
                </value>
                <value>
                    <fullName>eNB User Capacity</fullName>
                </value>
                <value>
                    <fullName>Load Balancing</fullName>
                </value>
                <value>
                    <fullName>Air interface UL</fullName>
                </value>
                <value>
                    <fullName>Air interface DL</fullName>
                </value>
                <value>
                    <fullName>VoLTE</fullName>
                </value>
                <value>
                    <fullName>Transport / security</fullName>
                </value>
                <value>
                    <fullName>LTE Evolution</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Spectrum Use</fullName>
                </value>
                <value>
                    <fullName>NW Coverage &amp; Quality &amp; NPO</fullName>
                </value>
                <value>
                    <fullName>WCDMA Voice Quality</fullName>
                </value>
                <value>
                    <fullName>WBTS Capacity</fullName>
                </value>
                <value>
                    <fullName>RNC Capacity</fullName>
                </value>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Load Balancing &amp; Interworking</fullName>
                </value>
                <value>
                    <fullName>3G Core Benchmark – Network Overview</fullName>
                </value>
                <value>
                    <fullName>MSS &amp; MGW Capacity</fullName>
                </value>
                <value>
                    <fullName>MSS &amp; MGW Performance</fullName>
                </value>
                <value>
                    <fullName>3G Core Voice Quality</fullName>
                </value>
                <value>
                    <fullName>3G Core Service Enablers</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core Benchmark – Network Overview</fullName>
                </value>
                <value>
                    <fullName>CFX-5000 &amp; TAS Capacity</fullName>
                </value>
                <value>
                    <fullName>CFX-5000 &amp; TAS Performance</fullName>
                </value>
                <value>
                    <fullName>Voice Interworking Performance</fullName>
                </value>
                <value>
                    <fullName>IMS VoLTE Core Service Enablers</fullName>
                </value>
                <value>
                    <fullName>NT-HLR Capacity</fullName>
                </value>
                <value>
                    <fullName>HSS Capacity</fullName>
                </value>
                <value>
                    <fullName>One-NDS Capacity</fullName>
                </value>
                <value>
                    <fullName>LTE Air-interface DL</fullName>
                    <isActive>false</isActive>
                    <label>LTE Air-interface DL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Supporting Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Technology_Txt__c</columns>
        <columns>Use_Case_Txt__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>File Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supporting Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AM_and_PM_cant_create_CXM_SM</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR($Permission.SWX_CCRE_Account_manager = TRUE, $Permission.SWX_CCRE_Pricing_manager =TRUE),ISPICKVAL(Supporting_Material_Type__c , &apos;CXM&apos;))</errorConditionFormula>
        <errorMessage>Account Manager and Pricing manager cannot create CXM Supporting Material</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Use_Case_for_Network_overview</fullName>
        <active>false</active>
        <description>Cannot select Use case, if network overview checkbox is true</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Document_Type__c , &apos;Network Overview&apos;) ,
 NOT(TEXT(Use_Case__c) = Null)
)</errorConditionFormula>
        <errorMessage>Use case should be None for Network Overview</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PM_and_SM_cant_create_RMP_SM</fullName>
        <active>true</active>
        <description>Proposal Manager and Solution Manager cannot create RMP Supporting Material</description>
        <errorConditionFormula>AND(OR( $Permission.SWX_CCRE_Proposal_Manager  = TRUE,  $Permission.SWX_CCRE_Solution_Manager  =TRUE),ISPICKVAL(Supporting_Material_Type__c , &apos;New Feature Release&apos;))</errorConditionFormula>
        <errorMessage>Proposal Manager and Solution Manager cannot create RMP Supporting Material</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_and_FC_not_required_for_CXM</fullName>
        <active>true</active>
        <description>PO_and_FC_not_required_for_CXM</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Supporting_Material_Type__c , &apos;CXM&apos;), 
OR(Frame_Contract_Reference__c &lt;&gt; Null,Purchase_Order__c 
&lt;&gt; Null) 
)</errorConditionFormula>
        <errorMessage>Agreement and Customer Purchase Order should not be populated for CXM Supporting Material</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_and_FC_required_for_contract_overview</fullName>
        <active>true</active>
        <description>PO_and_FC_required_for_contract_overview supporting material</description>
        <errorConditionFormula>AND(
 ISPICKVAL(Supporting_Material_Type__c , &apos;New Feature Release&apos;) ,
 ISPICKVAL(Document_Type__c , &apos;Contract Overview&apos;),
 OR(Frame_Contract_Reference__c = Null,Purchase_Order__c = Null) 
)</errorConditionFormula>
        <errorMessage>Agreement and Customer Purchase Order required for Contract Overview Supporting Material</errorMessage>
    </validationRules>
</CustomObject>